--- a/templates/arquivos.html
+++ b/templates/arquivos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerenciamento de Arquivos - Sistema PU</title>
+    <title>Arquivos - Sistema PU</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <!--<script src="{{ url_for('static', filename='js/protection.js') }}"></script>-->
