--- a/templates/register.html
+++ b/templates/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro - Sistema Alocação PU</title>
+    <title>Cadastro - Sistema PU</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
@@ -91,11 +91,6 @@
                             <option value="Administrativo">Administrativo</option>
                             <option value="T.I">T.I</option>
                         </select>
-                    </div>
-                    
-                    <div style="margin-bottom: 3rem;">
-                        <label class="block text-gray-700 text-sm font-bold mb-2">Email</label>
-                        <input type="email" id="novoEmail" required class="form-input-large">
                     </div>
                     
                     <div class="flex justify-center" style="gap: 2rem;">
